# limber-timber

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  unit-tests.yml
docs/: how_tos.md  index.md  learn.md  reference.md
docs/styles/: reference.css
it/big_query/: manifest.yaml
it/big_query/ops/: add_foreign_key.yaml  create_add_function.yaml  create_materialized_view.yaml  create_schema.yaml  create_table.yaml  create_view.yaml  drop_constraint.yaml  drop_schema.yaml  drop_table.yaml  rename_table.yaml  set_column_description.yaml  set_column_nullable.yaml  set_enable_change_history.yaml  set_expiration_timestamp.yaml  set_friendly_name.yaml  set_labels.yaml  set_require_partition_filter.yaml
it/big_query/sql/: add_column.yaml  add_column_field.yaml  create_add_function.sql  create_materialized_view_1.sql  create_schema.yaml  create_table.yaml  create_view_1.sql  drop_add_function.sql  drop_column.yaml  drop_column_field.yaml  drop_schema.yaml  is_add_function_dropped.sql  rename_column.yaml  set_case_sensitive.yaml  set_clustering.yaml  set_column_datatype.yaml  set_column_rounding_mode.yaml  set_default_partition_expiration.yaml  set_default_rounding_mode.yaml  set_default_table_expiration.yaml  set_description.yaml  set_enable_fine_grained_mutations.yaml  set_friendly_name.yaml  set_labels.yaml  set_max_staleness.yaml  set_max_time_travel.yaml  set_partition_expiration.yaml  (+2 more)
it/big_query_empty/: manifest.yaml
liti/: cli.py
liti/core/: base.py  function.py  runner.py
schema/: manifest-v1.schema.json  operations-file-v1.schema.json  template-v1.schema.json  templates-file-v1.schema.json
src/liti/: cli.py
tests/liti/: util.py
(+207 files in other folders)
