[tool.poetry]
name = 'limber-timber'
version = '0.0.1'
description = 'Database Migrations Made Easy'
authors = ['Daniel Tashjian <thewopple@gmail.com>']
readme = 'README.md'
packages = [
    { include = 'liti', from = 'src' },
]

[tool.poetry.scripts]
liti = 'liti.cli:main'

[tool.poetry.dependencies]
python = ">=3.10"
google-cloud-bigquery = '3.34.0'
pydantic = '2.11.4'
pyyaml = '6.0.2'
devtools = '0.12.2'

[tool.poetry.group.dev.dependencies]
pytest = '^8.3.5'

[tool.pytest.ini_options]
pythonpath = 'src'
testpaths = 'tests'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
